# APM

./: .gitignore  .gitmodules  00_MASTER_KNOWLEDGE_INDEX.md  AI_WORKFLOW_REQUIRED.md  Phase1_Complete_Summary.md  QUICK_START.md  README.md  WALL_PANELIZATION_RESEARCH_FINDINGS.md  apm_self_workflow.py  open_3d_model.sh
Business/: README.md  Strategic_Business_Framework.md
DEVELOPMENT/: remote_ssh_development_environment.md
Documentation/: README.md
Engineering/: Advanced_Manufacturing_Integration.md  Hardware_Systems_Integration_KB.md  README.md
INFRASTRUCTURE/: network_remote_development_summary.md
Knowledge_Base/: AI_Agent_Onboarding_Patterns.md  Cognitive_Architecture_Framework.md  KNOWLEDGE_EXPANSION_INDEX.md  stm32_klipper_octopus_tft35_analysis.md  universal_robots_6dof_ros_analysis.md
Learning/: HTML_CSS_JS_Skill_Development.md
Mission_Reports/: moveo_github_knowledge_mining_report.md
PROJECTS/: moveo_bridge_ws_analysis.md
Projects/: Advanced_Project_Management_Framework.md
Projects/Moveo_Bridge/src/moveo_description/: CMakeLists.txt  package.xml
Projects/Moveo_Bridge/src/moveo_description/launch/: view_model.launch.py
Projects/Moveo_Bridge/src/moveo_description/urdf/: moveo.urdf.xacro
Projects/Moveo_Bridge/src/moveo_moveit_config/: CMakeLists.txt  README.md  package.xml
Projects/Moveo_Bridge/src/moveo_moveit_config/config/: allowed_collision_matrix.yaml  controllers.yaml  joint_limits.yaml  moveit.rviz  ompl_planning.yaml  srdf_template.srdf
Projects/Moveo_Bridge/src/moveo_moveit_config/launch/: demo.launch.py
Projects/Moveo_Bridge/src/moveo_moveit_config/urdf/: moveo.urdf.xacro
Tools/: apm-pdf  (+12 more)
(+307 files in other folders)
